# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  wow
.github/workflows/: learn_actions.yml
brain_games/: cli.py  common.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  common.py
