[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = "5 types of games in one"
authors = ["Anna Fedorova <botney@yandex.ru>"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Topic :: Games/Entertainment"
]
repository = "https://github.com/annafedorova21/python-project-lvl1"
readme = "README.md"
packages = [
    { include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prg = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"

